apps/base/pihole/ingress.yaml
# ingressroute.yaml - Example IngressRoute for a web application
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
  annotations:
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pihole.homelab.cs-ol.de`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
#      middlewares:
#        - name: rate-limit
#          namespace: traefik

  tls: {}
#    certResolver: letsencrypt
